Properly center the screenshot pixmap

Otherwise we have to do weird hacks because the pixmap occupies the
full width.

Use the m_screenshot->geometry() to get the grab rectangle.
QWidget::geometry() returns the correct dpr divided geometry which is
needed when calling QWidget::grab() as it scales the given rectangle's
size by dpr again.

BUG: 506909